# ComputerChess

./: CMakeLists.txt  Makefile  README.md
include/: Board.h  Player.h  Utils.h
include/pieces/: Pawn.h  Piece.h  PieceUtils.h
src/: Board.cpp  CMakeLists.txt  Player.cpp  Utils.cpp  main.cpp
src/pieces/: CMakeLists.txt  Pawn.cpp  Piece.cpp  PieceUtils.cpp
test/: Board_unittest.cpp  CMakeLists.txt
